# fastapi-auth

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
fastapi_auth/: __init__.py  __main__.py  authenticate.py  consts.py  exceptions.py  fastapi_auth.py  hasher.py  jwt.py  permissions.py  types.py  utils.py
fastapi_auth/authenticators/: __init__.py  base.py
fastapi_auth/backends/: __init__.py  auth_backend.py  backend.py  base.py
fastapi_auth/filters/: __init__.py  base.py  ordering_filter.py  search_filter.py
fastapi_auth/managers/: __init__.py  base.py  manager.py
fastapi_auth/models/: __init__.py  model.py  token.py  user.py
fastapi_auth/models/sqlalchemy_models/: models.py  repositories.py  token.py  user.py
fastapi_auth/pagination/: __init__.py  base.py  limit_pagination.py  page.py  page_pagination.py
fastapi_auth/repositories/: __init__.py  base.py
fastapi_auth/schemas/: __init__.py  default_schemas.py
fastapi_auth/serializers/: __init__.py  base.py  serializers.py
fastapi_auth/serializers/sqlalchemy/: serializers.py
fastapi_auth/signals/: __init__.py  signal.py
fastapi_auth/sqlalchemy_models/: __init__.py  models.py  repositories.py  serializers.py
fastapi_auth/strategies/: __init__.py  base.py  db.py  jwt.py
fastapi_auth/tortoise_models/: __init__.py  models.py  repositories.py  serializers.py
fastapi_auth/transports/: bearer.py
fastapi_auth/utils/: __init__.py  command_utils.py  utils.py
